# neospice

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CREDITS.md  LICENSE  NOTICE  README.md  bsim4.out  capabilities.md  pyproject.toml
src/: CMakeLists.txt
src/api/: circuit_builder.cpp  circuit_builder.hpp  circuit_include.cpp  circuit_typed.cpp  cudaspice.cpp  cudaspice.hpp  measure_utils.cpp  neospice.cpp  neospice.hpp
src/core/: ac.cpp  ac.hpp  amd.cpp  amd.hpp  amd_lu_solver.cpp  amd_lu_solver.hpp  btf.cpp  btf.hpp  btf_solver.cpp  btf_solver.hpp  circuit.cpp  circuit.hpp  circuit_defs.hpp  convergence.cpp  convergence.hpp  dc.cpp  dc.hpp  fourier.cpp  fourier.hpp  freq_utils.hpp  klu_solver.cpp  klu_solver.hpp  linear_solver.cpp  linear_solver.hpp  make_solver.cpp  matching.cpp  matching.hpp  matrix.cpp  matrix.hpp  measure.cpp  measure.hpp  neo_solver.cpp  neo_solver.hpp  newton.cpp  newton.hpp  node_classify.cpp  node_classify.hpp  noise.cpp  noise.hpp  pz.cpp  (+17 more)
src/devices/: bjt_common.cpp  bjt_common.hpp  capacitor.cpp  capacitor.hpp  capacitor_model.hpp  cccs.cpp  cccs.hpp  cccs_nonlinear.cpp  cccs_nonlinear.hpp  ccvs.cpp  ccvs.hpp  ccvs_nonlinear.cpp  ccvs_nonlinear.hpp  ckt_terr.hpp  coupled_inductor.cpp  coupled_inductor.hpp  device.hpp  device_registry.cpp  device_registry.hpp  diode.cpp  diode.hpp  hfet_common.cpp  hfet_common.hpp  inductor.cpp  inductor.hpp  inductor_model.hpp  isource.cpp  isource.hpp  jfet_common.cpp  jfet_common.hpp  ltra.cpp  ltra.hpp  model_card_utils.hpp  mosfet_common.cpp  mosfet_common.hpp  resistor.cpp  resistor.hpp  resistor_model.hpp  switch.cpp  switch.hpp  (+15 more)
src/devices/asrc/: CMakeLists.txt  asrc_device.cpp  asrc_device.hpp  expression_ast.cpp  expression_ast.hpp
src/devices/bjt/: CMakeLists.txt  bjt_def.hpp  bjt_device.cpp  bjt_device.hpp  bjt_devsup.cpp  bjt_factory.cpp  bjt_load.cpp  bjt_model_card.cpp  bjt_model_card.hpp  bjt_mpar.cpp  bjt_param.cpp  bjt_setup.cpp  bjt_shim.cpp  bjt_shim.hpp  bjt_temp.cpp
src/devices/bsim3/: CMakeLists.txt  bsim3_check.cpp  bsim3_def.hpp  bsim3_device.cpp  bsim3_device.hpp  bsim3_devsup.cpp  bsim3_factory.cpp  bsim3_load.cpp  bsim3_model_card.cpp  bsim3_model_card.hpp  bsim3_mpar.cpp  bsim3_param.cpp  bsim3_setup.cpp  bsim3_shim.cpp  bsim3_shim.hpp  bsim3_temp.cpp
src/devices/bsim3v32/: CMakeLists.txt  bsim3v32_check.cpp  bsim3v32_def.hpp  bsim3v32_device.cpp  bsim3v32_device.hpp  bsim3v32_devsup.cpp  bsim3v32_factory.cpp  bsim3v32_load.cpp  bsim3v32_model_card.cpp  bsim3v32_model_card.hpp  bsim3v32_mpar.cpp  bsim3v32_param.cpp  bsim3v32_parser.hpp  bsim3v32_setup.cpp  bsim3v32_shim.cpp  bsim3v32_shim.hpp  bsim3v32_temp.cpp
src/devices/bsim4v7/: CMakeLists.txt  bsim4v7.cpp  bsim4v7.hpp  bsim4v7_check.cpp  bsim4v7_def.hpp  bsim4v7_device.cpp  bsim4v7_device.hpp  bsim4v7_devsup.cpp  bsim4v7_eval.cpp  bsim4v7_eval.hpp  bsim4v7_factory.cpp  bsim4v7_geo.cpp  bsim4v7_load.cpp  bsim4v7_model_card.cpp  bsim4v7_model_card.hpp  bsim4v7_mpar.cpp  bsim4v7_param.cpp  bsim4v7_params.hpp  bsim4v7_setup.cpp  bsim4v7_shim.cpp  bsim4v7_shim.hpp  bsim4v7_temp.cpp
src/devices/bsimsoi/: CMakeLists.txt  bsimsoi_check.cpp  bsimsoi_def.hpp  bsimsoi_device.cpp  bsimsoi_device.hpp  bsimsoi_devsup.cpp  bsimsoi_factory.cpp  bsimsoi_load.cpp  bsimsoi_model_card.cpp  bsimsoi_model_card.hpp  bsimsoi_mpar.cpp  bsimsoi_param.cpp  bsimsoi_parser.hpp  bsimsoi_setup.cpp  bsimsoi_shim.cpp  bsimsoi_shim.hpp  (+1 more)
src/output/: output.cpp  output.hpp  raw_writer.cpp  raw_writer.hpp  vectors.hpp
src/parser/: expression.cpp  expression.hpp  model_cards.cpp  model_cards.hpp  netlist_parser.cpp  netlist_parser.hpp  parse_state.hpp  subcircuit.hpp  subcircuit_expand.cpp  subcircuit_expand.hpp  tokenizer.cpp  tokenizer.hpp
src/solver/: build.cpp  config.hpp  element.hpp  error.hpp  factor.cpp  matrix.cpp  matrix.hpp  output.cpp  solve.cpp  utils.cpp
tests/: CMakeLists.txt
tests/bench/: bench_comprehensive.cpp  bench_neo_solver.cpp  bench_ordering_spike.cpp  bench_small_solver.cpp  bench_solver_throughput.cpp  bench_ths4131.cpp  bench_tlv3201.cpp  debug_tlv3201.cpp
tests/circuits/: OPA164x.lib  OPA164x_std.lib  am_source.cir  asrc_ac_gain.cir  asrc_ddt.cir  asrc_hertz.cir  asrc_idt.cir  asrc_multi_var.cir  asrc_pwl.cir  asrc_square.cir  asrc_tempco.cir  asrc_tempco_current.cir  asrc_temper.cir  asrc_trig.cir  asrc_vccs.cir  asrc_voltage_doubler.cir  bc547a.lib  bc547a_test.cir  bjt_ce_noise.cir  bsim3_cmos_inverter.cir  bsim3_nmos_ac.cir  bsim3_nmos_dc.cir  bsim3_nmos_iv.cir  bsim3_pmos_dc.cir  bsim3v32_nmos_ac.cir  bsim3v32_nmos_dc_op.cir  bsimsoi_nmos_ac.cir  bsimsoi_nmos_dc_op.cir  bsimsoi_pmos_dc_op.cir  cccs_poly.cir  cccs_poly2.cir  ccvs_poly.cir  cmos_inverter.cir  cmos_inverter_resistance.cir  coupled_inductor_ac.cir  coupled_inductor_dc.cir  coupled_inductor_transient.cir  diode_ac_response.cir  diode_dc_sweep.cir  diode_flicker_noise.cir  (+101 more)
tests/devices/: ngspice_compare_base.hpp
tests/framework/: comparator.cpp  comparator.hpp  ngspice_lib.hpp  ngspice_runner.cpp  ngspice_runner.hpp
tests/goldens/: bsim4v7_nmos_setup.json  probe.cir
tests/python/: test_bindings.py
tests/unit/: test_ac.cpp  test_adaptive_ptc.cpp  test_ako.cpp  test_amd.cpp  test_amd_lu.cpp  test_api.cpp  test_api_redesign_integration.cpp  test_asrc.cpp  test_bjt.cpp  test_bjt_jfet_noise.cpp  test_bordodynov_parser.cpp  test_bsim3_validation.cpp  test_bsim4v7.cpp  test_bsim4v7_ac.cpp  test_bsim4v7_cvtest.cpp  test_bsim4v7_dibl_clamp.cpp  test_bsim4v7_niintegrate.cpp  test_bsim4v7_noise.cpp  test_bsim4v7_query.cpp  test_bsim4v7_shim_load_fields.cpp  test_bsim4v7_shim_matrix.cpp  test_bsim4v7_subthreshold_gm.cpp  test_bsim4v7_trunc.cpp  test_bsim4v7_ucb_load.cpp  test_bsim4v7_ucb_setup.cpp  test_bsim4v7_vaclm.cpp  test_btf.cpp  test_btf_solver.cpp  test_capacitor.cpp  test_cccs.cpp  test_ccvs.cpp  test_circuit.cpp  test_circuit_builder.cpp  test_circuit_semiconductor.cpp  test_circuit_state.cpp  test_circuit_state_allocation.cpp  test_circuit_state_rotation.cpp  test_circuit_typed.cpp  test_comparator.cpp  test_convergence.cpp  (+80 more)
(+401 files in other folders)
