[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "neospice"
version = "0.1.0"
description = "Fast SPICE circuit simulator with a Pythonic API"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
]

[project.urls]
Homepage = "https://github.com/Razorback16/neospice"

[tool.scikit-build]
cmake.args = ["-DNEOSPICE_BUILD_PYTHON=ON", "-DNEOSPICE_BUILD_TESTS=OFF"]
wheel.packages = ["python/neospice"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_* *-win*"
test-requires = "pytest numpy"
test-command = "pytest {project}/tests/python -v"

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y suitesparse-devel openblas-devel cmake",
    "git clone --depth 1 --branch 3.6 https://github.com/shibatch/sleef.git /tmp/sleef",
    "cmake -S /tmp/sleef -B /tmp/sleef/build -DCMAKE_INSTALL_PREFIX=/usr/local -DSLEEF_BUILD_TESTS=OFF -DSLEEF_BUILD_DFT=OFF",
    "cmake --build /tmp/sleef/build --target install",
]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
before-all = "brew install suite-sparse openblas sleef"
