add_library(bsim4v7_obj OBJECT
    bsim4v7_setup.cpp
    bsim4v7_load.cpp
    bsim4v7_temp.cpp
    bsim4v7_check.cpp
    bsim4v7_mpar.cpp
    bsim4v7_param.cpp
    bsim4v7_geo.cpp
    bsim4v7_devsup.cpp
    bsim4v7_shim.cpp
    bsim4v7_device.cpp
    bsim4v7_model_card.cpp
    bsim4v7_factory.cpp
)
