add_library(hisimhv_obj OBJECT
    hisimhv_setup.cpp
    hisimhv_load.cpp
    hisimhv_temp.cpp
    hisimhv_mpar.cpp
    hisimhv_param.cpp
    hisimhv_eval.cpp
    hisimhv_eval_dio.cpp
    hisimhv_eval_rdrift.cpp
    hisimhv_devsup.cpp
    hisimhv_shim.cpp
    hisimhv_device.cpp
    hisimhv_model_card.cpp
    hisimhv_factory.cpp
)
